Fixed deprecation warnings from java 11