@@ -1,6 +1,6 @@
 /*
  * IRIS -- Intelligent Roadway Information System
- * Copyright (C) 2013-2017  Minnesota Department of Transportation
+ * Copyright (C) 2013-2020  Minnesota Department of Transportation
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -136,7 +136,7 @@ public class GateArmTableModel extends ProxyTableModel<GateArm> {
 			HashMap<String, Object> attrs =
 				new HashMap<String, Object>();
 			attrs.put("ga_array", ga_array);
-			attrs.put("idx", new Integer(idx));
+			attrs.put("idx", Integer.valueOf(idx));
 			descriptor.cache.createObject(name, attrs);
 		}
 	}
